# BRPR

./: LICENSE  package.json  pnpm-lock.yaml
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json  yolov8_pt_to_safetensors.py
src-tauri/examples/yolo-v8/: main.rs
src-tauri/examples/yolo-v8-br/: main.rs
src-tauri/examples/yolo-v8-onnx-benchmark/: main.rs
src-tauri/models/: yolov8n_imgsz640.onnx
src-tauri/src/: br_classes.rs  lib.rs  main.rs  screenshot.rs  task.rs  utils.rs  yolo_v8.rs
src-tauri/src/model/: mod.rs
src/assets/: styles.css
src/components/: NumberSelector.vue
