[package]
name = "buckshot-roulette-projectile-recorder"
version = "0.0.3"
description = "Buckshot Roulette Projectile Recorder, use Vue3 and Tauri."
readme = "../README.md"
license-file = "../LICENSE"
authors = ["Lixuhuilll"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
fast_image_resize = { version = "4.0.0", features = ["image"] }
image = { version = "0.25.0", default-features = false }
ndarray = "0.15.6"
ort = { version = "2.0.0-rc.2", default-features = false, features = ["download-binaries", "ndarray"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1", features = ["dialog-confirm", "window-close", "window-set-title", "window-show", "window-set-always-on-top"] }
tauri-plugin-window-state = "0.1.1"
tokio = { version = "1", features = ["time"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
xcap = "0.0.9"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
